--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Promise handling for jasmine",
   "main": "index.js",
   "scripts": {
-    "test": "tslint '*.ts' && jasmine-ts index.spec.ts"
+    "test": "tslint '*.ts' -e '*.d.ts' && jasmine-ts index.spec.ts",
+    "prepublish": "tsc"
   },
   "repository": {
     "type": "git",
