--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,16 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es6",
+        "target": "es2015",
         "noImplicitAny": true,
         "sourceMap": true,
-        "declaration": true
-    }
+        "declaration": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitUseStrict": true
+    },
+    "exclude": [
+      "*.spec.ts",
+      "node_modules"
+    ]
 }
